Fix nav and page spacing

--- a/_sass/_navigation.sass
+++ b/_sass/_navigation.sass
@@ -38,6 +38,9 @@
             border-bottom-color: $primary
     li.nav__item--last
       border-bottom: none
+      margin-bottom: 0.8rem
+      +for-tablet-landscape-up
+        margin-bottom: 0rem
 
     a
       border-bottom: none
