--- a/css/main.sass
+++ b/css/main.sass
@@ -44,7 +44,7 @@ $font-regular:  "CartographSansCF-Regular", Helvetica, Arial, sans-serif
 $font-bold:     "CartographSansCF-Bold", Helvetica, Arial, sans-serif
 
 // Spacing around left and right
-$gutter: 2.5rem
+$gutter: 1.5rem
 
 @import "_colours"
 @import "_typography"
